# FileWatcher

./: .clang-format  .clangd  .gitignore  .ignore  CMakeLists.txt  README  README.md  test.py
demonstration/: hello.txt
includes/: epoll.hpp  errno.hpp  fdObject.hpp  fileWatcher.hpp  processer.hpp  socket.hpp  util.hpp
src/: inotify_test.cpp  main.cpp
